<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kitchentitle"
        android:contentDescription="@string/todo" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="162dp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/enter_your_registered_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:targetApi="o" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@null"
        android:text="@string/not_a_member_get_registered_now"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_password"
        tools:ignore="SpUsage" />






</android.support.constraint.ConstraintLayout>